added bottom navigation menu

--- a/app/src/main/res/layout/fragment_sample.xml
+++ b/app/src/main/res/layout/fragment_sample.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
         android:textSize="40sp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
