handled an error getting data in the search

--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/sampleFragment"
-        android:icon="@drawable/cloudy"
+        android:icon="@drawable/clouds"
         android:title="@string/weather_list" />
 
     <item
