--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -54,6 +54,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sample_item" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/error_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/city_name" />
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
